Add ServiceManagerContextTest.TerminateOnServiceQuit

For mash, certain services are considered critical (window
server, window manager). The browser is terminated if one
of those services goes down.

* Add support for mojo packaged service manifest overlays
  to content_shell
* Add the test "echo" service to content_shell so it can
  be used in content_browsertests
* Test that terminating the echo service can trigger
  browser termination.

Bug: 772098
Test: content_browsertests
Change-Id: Ie4c8af6956b8800806f9dbd88812af008b6541fb