content/shell/browser/shell_content_browser_client.h
@@ -43,6 +43,8 @@ class ShellContentBrowserClient : public ContentBrowserClient {
       mojo::ScopedMessagePipeHandle interface_pipe) override;
   void RegisterInProcessServices(StaticServiceMap* services) override;
   void RegisterOutOfProcessServices(OutOfProcessServiceMap* services) override;
+  bool ShouldTerminateOnServiceQuit(
+      const service_manager::Identity& id) override;
   std::unique_ptr<base::Value> GetServiceManifestOverlay(
       base::StringPiece name) override;
   void AppendExtraCommandLineSwitches(base::CommandLine* command_line,
@@ -97,6 +99,10 @@ class ShellContentBrowserClient : public ContentBrowserClient {
       base::Closure select_client_certificate_callback) {
     select_client_certificate_callback_ = select_client_certificate_callback;
   }
+  void set_should_terminate_on_service_quit_callback(
+      base::Callback<bool(const service_manager::Identity&)> callback) {
+    should_terminate_on_service_quit_callback_ = callback;
+  }
 
  protected:
   virtual void ExposeInterfacesToFrame(
@@ -117,6 +123,8 @@ class ShellContentBrowserClient : public ContentBrowserClient {
       resource_dispatcher_host_delegate_;
 
   base::Closure select_client_certificate_callback_;
+  base::Callback<bool(const service_manager::Identity&)>
+      should_terminate_on_service_quit_callback_;
 
   std::unique_ptr<
       service_manager::BinderRegistryWithArgs<content::RenderFrameHost*>>
